Release 1.6 beta3 (in development)
==================================

Incompatible changes
--------------------

Deprecated
----------

Features added
--------------

Bugs fixed
----------

Testing
--------

Release 1.6 beta2 (released Apr 29, 2017)
=========================================

Incompatible changes
--------------------

* #3345: Replace the custom smartypants code with docutils' smart_quotes

Deprecated
----------

* #3662: ``builder.css_files`` is deprecated.  Please use ``add_stylesheet()``
  API instead.

Bugs fixed
----------

* #3661: sphinx-build crashes on parallel build
* #3669: gettext builder fails with "ValueError: substring not found"
* #3660: Sphinx always depends on sphinxcontrib-websupport and its dependencies

Release 1.6 beta1 (released Apr 24, 2017)
=========================================

Dependencies
------------

* (updated) latex output is tested with Ubuntu trusty's texlive packages (Feb.
  2014) and earlier tex installations may not be fully compliant, particularly
  regarding Unicode engines xelatex and lualatex
* (added) latexmk is requirement for ``make latexpdf`` on Unix-like platforms
  (refs: #3082)

Incompatible changes
--------------------

* #1061, #2336, #3235: Now generation of autosummary doesn't contain imported
  members by default. Thanks to Luc Saffre.
* LaTeX ``\includegraphics`` command isn't overloaded: only ``\sphinxincludegraphics``
  has the custom code to fit image to available width if oversized.
* The subclasses of ``sphinx.domains.Index`` should override ``generate()``
  method.  The default implementation raises NotImplementedError
* LaTeX positioned long tables horizontally centered, and short ones
  flushed left (no text flow around table.) The position now defaults to center in
  both cases, and it will obey Docutils 0.13 ``:align:`` option (refs #3415, #3377)
* option directive also allows all punctuations for the option name (refs: #3366)