@@ -13,6 +13,9 @@ Features added
 Bugs fixed
 ----------
 
+* #3588: No compact (p tag) html output in the i18n document build even when
+  :confval:`html_compact_lists` is True.
+
 Testing
 --------
 
